    <http://github.com/abw/Template-TT3>.

  Version 0.10 - Not Yet released
    Added Badger::Comparable and Badger::Duration.

    Refactored parts of Badger::Config and added Badger::Config::Directory.

    Added no_config() method to Badger::Hub.

    Fixed a bug in the auto_can feature of Badger::Class::Methods which
    prevented it from working with subclasses.

    Added plurality(), inflect(), list_each(), hash_each(), extend(),
    split_to_list(), join_uri() and resolve_uri(), to Badger::Utils.

    Added additional delegate hooks to Badger::Utils to load utility
    functions in Badger::Filesystem, Badger::Timestamp, Badger::Duration,
    Badger::Logic and Badger::URL.

    Squashed a non-numerical warning in Badger::Timestamp.

    Added the UTF8, JSON and YAML constants to Badger::Constants.

  Version 0.09 - 8th February 2012
    Added Badger::Codec::Timestamp. Changed Badger::Timestamp to numify
    values to remove leading zeroes (e.g. 2012/04/20 now yields a month of 4
    instead of 04).

    Fixed some obscure bugs in the module loading code in Badger::Class and
    related modules that could potentially cause unpredictable results on
    case insensitive file systems (e.g. Apple's HFS with default settings).

    Added the restat() method to Badger::Filesystem::Path.

    Added documentation for various methods that was missing. Temporary
    disabled the Pod::Coverage tests on AUTOMATED_TESTING systems. We know
    there's still stuff to do.

    Added SLASH to Badger::Constants

  Version 0.08 - 13th January 2012
    Restored the $VERSION variable to Badger.pm rather than using the
    "version" import hook in Badger::Class which confused PAUSE.

    Changed Badger::Test::Manager to detect undefined results.

    Merged Michael Grubb's bug fix for Badger::Base:
    <https://github.com/abw/Badger/pull/1>

    Fixed some minor documentation issues.

  Version 0.07 - 2nd January 2012
    Added Badger::Storage, Badger::Storage::Memory. and