@@ -38,6 +38,10 @@ Added no_config() method to L<Badger::Hub>.
 Fixed a bug in the L<auto_can|Badger::Class::Methods/auto_can()> feature
 of L<Badger::Class::Methods> which prevented it from working with subclasses.
 
+Fixed a bug in L<Badger::Debug> L<dump_ref()|Badger::Debug/dump_ref()> 
+to make it directly call other C<dump_XXX()> functions instead of relying on 
+inheritance of those methods through C<$self>.
+
 Added L<plurality()|Badger::Utils/plurality()>, 
 L<inflect()|Badger::Utils/inflect()>,
 L<list_each()|Badger::Utils/list_each()>,
